--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
+---
+layout: default
+---
+
 <a href="https://github.com/gosiad37" target="_blank">
-    <img style="position: absolute; top: 0; left: 0; border: 0;" 
-         src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" 
+    <img style="position: absolute; top: 0; left: 0; border: 0;"
+         src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"
          alt="Fork me on GitHub">
 </a>
+
+<div style="text-align: center; padding-top: 50px;">
+    <h1><strong>MARGARET DEBSKA</strong></h1>
+    <p><em>This is my final project for CS-499, Computer Science Capstone at SNHU.</em></p>
+    
+    <img src="yourphoto.jpg" alt="Profile Photo" style="width: 200px; border-radius: 8px; margin: 20px 0;">
+    
+    <h2 style="color:#7d2145;">Computer Science Capstone</h2>
+    <h3>CS-499 | SNHU</h3>
+</div>
+
+<hr>
+
+<h3>CODE REVIEW</h3>
+<p>
+    A code review involves quality assurance on a particular project by reviewing its source code and output.
+    This is highly important to the success of computer science professionals, since it ensures a level of
+    consistency in the development of a project and allows for a higher level of coding standards to be met.
+</p>
+<p>
+    <a href="https://your-code-review-link.com" style="background-color:#eee; padding:5px; border-radius:3px;">
+        You can watch the code review here.
+    </a>
+</p>
+
+<hr>
+
+<h3>PROJECTS</h3>
+<p>Projects by <strong>Margaret Debska</strong> can be found on <a href="https://github.com/gosiad37">GitHub</a>.</p>
