--- a/index.html
+++ b/index.html
@@ -33,6 +33,82 @@ layout: default
 </p>
 
 <hr>
+---
+layout: default
+---
+
+<a href="https://github.com/gosiad37" target="_blank">
+    <img style="position: absolute; top: 0; left: 0; border: 0;"
+         src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"
+         alt="Fork me on GitHub">
+</a>
+
+<div style="text-align: center; padding-top: 50px;">
+    <h1><strong>MARGARET DEBSKA</strong></h1>
+    <p><em>This is my final project for CS-499, Computer Science Capstone at SNHU.</em></p>
+    
+    <img src="yourphoto.jpg" alt="Profile Photo" style="width: 200px; border-radius: 8px; margin: 20px 0;">
+    
+    <h2 style="color:#7d2145;">Computer Science Capstone</h2>
+    <h3>CS-499 | SNHU</h3>
+</div>
+
+<hr>
+
+<h3>CODE REVIEW</h3>
+<p>
+    A code review involves quality assurance on a particular project by reviewing its source code and output.
+    This is highly important to the success of computer science professionals, since it ensures a level of
+    consistency in the development of a project and allows for a higher level of coding standards to be met.
+</p>
+<p>
+    <a href="https://your-code-review-link.com" style="background-color:#eee; padding:5px; border-radius:3px;">
+        You can watch the code review here.
+    </a>
+</p>
+
+<hr>
+
+<h3>PROJECTS</h3>
+<p>Projects by <strong>Margaret Debska</strong> can be found on <a href="https://github.com/gosiad37">GitHub</a>.</p>
+
+<hr>
+
+<!-- START OF MERLOT PAGE CONTENT -->
+<p align="center"> 
+  <img src="ePortfolio Pictures/Screenshot_20250715_073506_Picsart.jpg" alt="Profile Picture" width="200" height="200" style="border-radius: 50%;">
+</p>
+
+# Malgorzata Debska
+
+## <center>CS-499 Computer Science Capstone | Southern New Hampshire University</center>
+
+---
+
+## Table of Contents
+
+- [Professional Self-Assessment](#professional-self-assessment)  
+- [Enhancement One - Software Design and Engineering (CS-410)](#enhancement-one-software-design-and-engineering-cs-410)  
+- [Code Review Video - CS-410](#code-review-video-cs-410)  
+- [Enhancement Two - Algorithms and Data Structures (CS-340)](#enhancement-two-algorithms-and-data-structures-cs-340)  
+- [Code Review Video - CS-340](#code-review-video-cs-340)  
+- [Enhancement Three - Databases (CS-405)](#enhancement-three-databases-cs-405)  
+- [Code Review Video - CS-405](#code-review-video-cs-405)  
+
+---
+
+##  **Professional Self-Assessment**
+
+[... your entire pasted content exactly as you provided it ...]  
+
+---
+
+### Thank you for visiting my ePortfolio!  
+I look forward to using these skills and experiences in my future career.
+
+---
+<!-- END OF MERLOT PAGE CONTENT -->
+
 
 <h3>PROJECTS</h3>
 <p>Projects by <strong>Margaret Debska</strong> can be found on <a href="https://github.com/gosiad37">GitHub</a>.</p>
