--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ I reinforced proper memory management by using std::unique_ptr for the collectio
 </p>
 
 <p>
-This artifact shows my understanding of dynamic collections and my ability to write unit tests that validate core functionality. The enhancements reinforce my commitment to quality, maintainability, and professional documentation. It demonstrates my proficiency in C++ and test-driven development principles.
+These enhancements significantly improved the clarity, maintainability, and reliability of the code. They also reflect my understanding of software engineering best practices and my ability to apply those practices in a meaningful way. This artifact directly supports the course outcomes I set out to achieve in Module One. I applied modular design, test-driven development principles, and robust error handling. The enhancements I made helped me go beyond simply writing tests I learned to think critically about edge cases, failure conditions, and the long-term sustainability of the code. At this point, I do not have any updates to my outcome-coverage plans, as this artifact fully demonstrates the skills I intended to strengthen.
 </p>
 
 <h2 id="code-review-video-cs-405">Code Review Video - CS-405</h2>
