--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@ I reinforced proper memory management by using std::unique_ptr for the collectio
 These enhancements significantly improved the clarity, maintainability, and reliability of the code. They also reflect my understanding of software engineering best practices and my ability to apply those practices in a meaningful way. This artifact directly supports the course outcomes I set out to achieve in Module One. I applied modular design, test-driven development principles, and robust error handling. The enhancements I made helped me go beyond simply writing tests I learned to think critically about edge cases, failure conditions, and the long-term sustainability of the code. At this point, I do not have any updates to my outcome-coverage plans, as this artifact fully demonstrates the skills I intended to strengthen.
 </p>
 
+<p>
+Reflecting on the enhancement process, I gained a deeper understanding of how valuable thorough testing and thoughtful design can be in ensuring software quality. One of the challenges I faced was determining how to best simulate database-like operations within a C++ environment that doesn't use a database engine. I focused on core behaviors like adding entries, resizing collections, and validating boundaries, and ensured these were covered by meaningful, automated tests.
+</p>
+
+<p>
+This process helped me transition from simply making code “work” to engineering code that is reliable, readable, and resilient. It reinforced the idea that strong testing and defensive design aren’t optional, they are essential to building professional-grade software. Overall, this artifact reflects not just my technical growth but also my evolving mindset as a developer who prioritizes quality, clarity, and long-term maintainability
+</p>
+
 <h2 id="code-review-video-cs-405">Code Review Video - CS-405</h2>
 
 <p><em>(Add your video link here)</em></p>
