--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ Together, these artifacts form a cohesive narrative of my abilities: I can desig
 
 <p><strong>Located in the <code>Software-Engineering-and-Design</code> Folder</strong></p>
 
+<p><strong>Located in the <a href="Software%20Engineering%20and%20Design/" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
+
+
 <p>
 The artifact I selected from CS-410: Software Reverse Engineering is an in-depth project focused on analyzing and deconstructing a software program using both static and dynamic analysis techniques. This project required me to reverse engineer a compiled application by interpreting low-level code and reconstructing its high-level logic. I used tools to disassemble and examine the executable, which allowed me to understand how the software functioned without access to the original source code. Through this process, I learned to think critically and carefully dissect software in a way that exposed its logic, functions, and potential vulnerabilities.
 </p>
