--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Together, these artifacts form a cohesive narrative of my abilities: I can desig
 
 <p><strong>Located in the <code>Software-Engineering-and-Design</code> Folder</strong></p>
 
-<p><strong>Located in the <a href="Software%20Engineering%20and%20Design/" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
+<p><strong>Located in the <a href="Software Engineering and Design" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
 
 
 <p>
