--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ Together, these artifacts form a cohesive narrative of my abilities: I can desig
   <img src="ePortfolio Pictures/1000004989.jpg" alt="CS-410 Artifact">
 </div>
 
-<p><strong>Located in the <code>Software-Engineering-and-Design</code> Folder</strong></p>
 
-<p><strong>Located in the <a href="Software Engineering and Design" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
+
+<p><strong>Located in the <a href="Software Engineering and Design/" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
 
 
 <p>
