--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@ Together, these artifacts form a cohesive narrative of my abilities: I can desig
 
 
 
-<p><strong>Located in the <a href="Software Engineering and Design/" target="_blank"><code>Software Engineering and Design</code> Folder</a></strong></p>
-
+<code>You can watch the code review <a href="https://www.brandonlombard.com/CS-499/code-review.html">here</a>.</code>
 
 <p>
 The artifact I selected from CS-410: Software Reverse Engineering is an in-depth project focused on analyzing and deconstructing a software program using both static and dynamic analysis techniques. This project required me to reverse engineer a compiled application by interpreting low-level code and reconstructing its high-level logic. I used tools to disassemble and examine the executable, which allowed me to understand how the software functioned without access to the original source code. Through this process, I learned to think critically and carefully dissect software in a way that exposed its logic, functions, and potential vulnerabilities.
