--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+---
+layout: default
 
+---
 
 <div align="center">
   <img src="ePortfolio Pictures/Screenshot_20250715_073506_Picsart.jpg" alt="Profile Picture" width="200" height="200" style="border-radius: 50%;">
