--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Throughout my coursework, I have worked on projects that reflect the real-world 
 </p>
 
 <p>
-Equally important has been my development in communicating with stakeholders—translating technical challenges into clear, actionable language. I have engaged in requirements gathering, status reporting, and solution presentations, always keeping the end user in mind. This skill has proven essential not only for ensuring that technical solutions meet business needs but also for establishing trust and clarity between technical and non-technical audiences.
+Equally important has been my development in communicating with stakeholders translating technical challenges into clear, actionable language. I have engaged in requirements gathering, status reporting, and solution presentations, always keeping the end user in mind. This skill has proven essential not only for ensuring that technical solutions meet business needs but also for establishing trust and clarity between technical and non-technical audiences.
 </p>
 
 <h3>Growth Through Coursework and ePortfolio Development</h3>
@@ -45,7 +45,7 @@ From my first introductory programming assignments to the complex, multi-compone
 </p>
 
 <p>
-One of the most valuable aspects of this process has been seeing my progression—from writing functional code to designing maintainable, modular, and scalable solutions. The act of improving my artifacts was not just about cleaner code; it was about developing the mindset of a professional who anticipates future requirements, considers the user’s needs, and applies systematic approaches to problem-solving.
+One of the most valuable aspects of this process has been seeing my progression from writing functional code to designing maintainable, modular, and scalable solutions. The act of improving my artifacts was not just about cleaner code; it was about developing the mindset of a professional who anticipates future requirements, considers the user’s needs, and applies systematic approaches to problem-solving.
 </p>
 
 <h3>Collaborating in a Team Environment</h3>
