--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ Introducing <strong>error handling, file I/O</strong>, and <strong>structured de
   <img src="ePortfolio Pictures/1000004986.jpg" alt="CS-340 Artifact">
 </div>
 
-<p><strong>Located in the <code>Algorithms-and-Data-Structures</code> Folder</strong></p>
+<code>You can see the orginal and enhanced code <a href="https://github.com/GosiaD37/GosiaD37.github.io/tree/main/Algorithms%20and%20Data%20Structures">here</a>.</code>  
+
 
 <p>
 The second artifact I selected for my ePortfolio is a web-based CRUD (Create, Read, Update, Delete) application originally developed in CS-340: Client-Server Development. This project was created using Python, Flask, and MongoDB, with a Dash web interface to visualize animal shelter data. The application provides interactive features for users to view and filter animals suited for rescue tasks, such as water or mountain rescue. The initial version was completed during the course, but I enhanced and restructured it to better demonstrate my evolving technical skills.
