--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ Ultimately, this enhancement strengthened both my technical and problem-solving 
   <img src="ePortfolio Pictures/1000004985.jpg" alt="CS-405 Artifact">
 </div>
 
-<p><strong>Located in the <code>Databases</code> Folder</strong></p>
+<code>You can see the orginal code and enhanced one <a href="https://github.com/GosiaD37/GosiaD37.github.io/tree/main/Databases">here</a>.</code>  
+
 
 <p>
 For the final category, I selected a contact management system that I initially created in CS-405. It tests the behavior of a dynamic collection using the <code>std::vector</code> class and the Google Test framework. This test suite is designed to verify operations like adding elements, resizing the collection, clearing values, checking capacity, and handling exceptions. Although not tied to a formal database system, the project simulates key behaviors of a data structure management system that would underlie many database operations.
