--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 <h2 id="professional-self-assessment">Professional Self-Assessment</h2>
 
 <p>
-Over the past three years in the Computer Science program, I have experienced a truly transformative journey—one that has challenged me to grow as a problem solver, a collaborator, and a professional in the field of technology. What began as an interest in understanding how software works has evolved into a deep, multifaceted skill set spanning software development, algorithms, databases, security, and effective communication with diverse stakeholders.
+Over the past three years in the Computer Science program, I have experienced a truly transformative journey one that has challenged me to grow as a problem solver, a collaborator, and a professional in the field of technology. What began as an interest in understanding how software works has evolved into a deep, multifaceted skill set spanning software development, algorithms, databases, security, and effective communication with diverse stakeholders.
 </p>
 
 <p>
@@ -51,7 +51,7 @@ One of the most valuable aspects of this process has been seeing my progression 
 <h3>Collaborating in a Team Environment</h3>
 
 <p>
-Team-based projects in my coursework taught me the importance of collaboration, version control, and role adaptability. I worked in environments where tasks were divided across team members, requiring consistent integration of different coding styles and ideas. Using tools like Git, I learned how to merge contributions smoothly, resolve conflicts, and maintain code integrity. These experiences also helped me understand that successful collaboration depends on clear communication, mutual respect, and an openness to feedback—skills I will carry into any professional setting.
+Team-based projects in my coursework taught me the importance of collaboration, version control, and role adaptability. I worked in environments where tasks were divided across team members, requiring consistent integration of different coding styles and ideas. Using tools like Git, I learned how to merge contributions smoothly, resolve conflicts, and maintain code integrity. These experiences also helped me understand that successful collaboration depends on clear communication, mutual respect, and an openness to feedback, skills I will carry into any professional setting.
 </p>
 
 <h3>Communicating with Stakeholders</h3>
@@ -69,7 +69,7 @@ Throughout the program, I gained a deep appreciation for the importance of algor
 <h3>Software Engineering and Database Skills</h3>
 
 <p>
-My coursework in software engineering emphasized the value of modular design, code reusability, and systematic testing. I applied these principles in both front-end and back-end contexts, ensuring that my applications were both functional and maintainable. In database-related projects, I gained experience with both SQL and NoSQL systems, focusing on schema design, query optimization, and data integrity. Integrating databases into larger software solutions allowed me to bridge the gap between persistent data storage and dynamic application behavior.
+My coursework in software engineering emphasized the value of modular design, code reusability, and systematic testing. I applied these principles in both front-end and back-end contexts, ensuring that my applications were both functional and maintainable. In database related projects, I gained experience with both SQL and NoSQL systems, focusing on schema design, query optimization, and data integrity. Integrating databases into larger software solutions allowed me to bridge the gap between persistent data storage and dynamic application behavior.
 </p>
 
 <h3>Security Awareness</h3>
@@ -89,7 +89,7 @@ Security considerations were embedded in many of my projects, reinforcing that s
 </ul>
 
 <p>
-Together, these artifacts form a cohesive narrative of my abilities: I can design and implement full-stack solutions that are efficient, maintainable, secure, and user-oriented. Each artifact builds on the same professional values—clarity, adaptability, and quality—that I will bring to my future work.
+Together, these artifacts form a cohesive narrative of my abilities: I can design and implement full-stack solutions that are efficient, maintainable, secure, and user oriented. Each artifact builds on the same professional values, clarity, adaptability, and quality, that I will bring to my future work.
 </p>
 
 <hr>
