--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@ Introducing <strong>error handling, file I/O</strong>, and <strong>structured de
 
 <h2 id="code-review-video-cs-410">Code Review Video - CS-410</h2>
 
-<p><em>https://youtu.be/SzGRhwiYMFY</em></p>
+<p>
+  Below is a link to my YouTube page where I uploaded my Code Review.  
+  This video was created and shared on YouTube:  
+  <a href="https://youtu.be/SzGRhwiYMFY" target="_blank">https://youtu.be/SzGRhwiYMFY</a>
+</p>
+
 
 <hr>
 
