--- a/index.html
+++ b/index.html
@@ -213,7 +213,12 @@ Ultimately, this enhancement strengthened both my technical and problem-solving 
 
 <h2 id="code-review-video-cs-340">Code Review Video - CS-340</h2>
 
-<p><em>(Add your video link here)</em></p>
+<p>
+  Below is a link to my YouTube page where I uploaded my Code Review.<br>
+  This video was created and shared on YouTube:  
+  <a href="https://youtu.be/c_HpqP-qEcI" target="_blank">https://youtu.be/c_HpqP-qEcI</a>
+</p>
+
 
 <hr>
 
