--- a/index.html
+++ b/index.html
@@ -265,7 +265,12 @@ This process helped me transition from simply making code “work” to engineer
 
 <h2 id="code-review-video-cs-405">Code Review Video - CS-405</h2>
 
-<p><em>(Add your video link here)</em></p>
+<p>
+  Below is a link to my YouTube page where I uploaded my Code Review.<br>
+  This video was created and shared on YouTube:  
+  <a href="https://youtu.be/krFubb637Y8" target="_blank">https://youtu.be/krFubb637Y8</a>
+</p>
+
 
 <hr>
 
